--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <title>Pre entrega 3</title>
+    <title>Entrega Final - Guido Santos</title>
 </head>
 <body>
     <h2 id="titulo">Bienvenido al simulador de cuentas</h2>
@@ -33,6 +33,8 @@
             </form>
         </div>
         <p id="oferta"></p>
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="./js/main.js"></script>
 </body>
 </html>
